# SEES_AQI

./: .gitignore  README.md  coord_processing.ipynb  data_processing.ipynb  fno_algae_physics_model.pt  pyproject.toml  requirements.txt  ssh-remote+s_01kx1jtfv9xdqm2m6k9f705dbv@ssh.lightn.mailloc  test_processing.ipynb
data/processed_geotiffs_west_basin/: replace_nan.py  test.py  visualize_processed_humidity.py  visualize_processed_precipitation.py  visualize_processed_temp.py  visualize_processed_uv.py  visualize_processed_wind_direction.py  visualize_processed_wind_speed.py
data_processing/: test_processing.py
model_pipeline/: physics.py  train.py
processed_data/data_publicCSV/: Precipitation (Central Basin Area) - Sheet1.csv  Precipitation (Western Basin Area) - Sheet1.csv  Temperature At 2Meters (Western Basin Area) - Sheet1.csv  Wind Speed At 10Meters (Central Basin Area) - Sheet1.csv
raw_data/: All Sky Surface UV Index (Central Basin Area).xlsx  Precipitation (Eastern Basin Area).xlsx  Temperature At 2Meters (Central Basin Area).xlsx  Wind Direction At 10Meters (Central Basin Area).xlsx  Wind Direction At 2Meters (Western Basin Area).xlsx  Wind Speed At 10Meters (Central Basin Area).xlsx  Wind Speed at 10Meters (Western Basin Area).xlsx
raw_data/raw_data_UToledo/: PM2.5 Data compiled_downloaded_2025_2026_BT.07012026.xlsx  WeatherCloud Compiled Data_Lake Erie Center_2025_2026-BT.07012026.xlsx
raw_data/raw_data_public/: All Sky Surface UV Index (Eastern Basin Area).xlsx  Specific Humidity At 2Meters (Eastern Basin Area).xlsx  (+2 more)
(+87 files in other folders)
